Added simple validation for time, description and name when creating tasks
